[project]
name = "nu-specter"
version = "0.1.0"
description = "Zero-copy numpy array sharing between Python processes via shared memory"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout"]

[tool.pytest.ini_options]
timeout = 30
